Initial commit of backend setup

--- a/src/frontend/Fitness Resouces/pages/homepage.html
+++ b/src/frontend/Fitness Resouces/pages/homepage.html
@@ -21,7 +21,7 @@
       <img class="ellipse-1" src="../assets/vectors/ellipse_1_x2.svg" />
       <div class="container">
         <span class="fitness-app">
-        Fitness App
+        Fitness Arc
         </span>
         <div class="navbar">
           <div class = "home">
