--- a/src/frontend/Fitness Resouces/pages/login.html
+++ b/src/frontend/Fitness Resouces/pages/login.html
@@ -58,7 +58,7 @@
         </div>
         <div class="container">
           <span class="login-1">
-          Login
+            <button onclick="location.href='login.html'" class="nav-button" data-view="login" placeholder = "Login">Login</button>
           </span>
         </div>
       </div>
