remove about page

--- a/src/frontend/Fitness Resouces/pages/nutrition.html
+++ b/src/frontend/Fitness Resouces/pages/nutrition.html
@@ -20,18 +20,16 @@
         <span class="fitness-app">
         Fitness App
         </span>
-        <div class="home">
-        Home
+        <div class="navbar">
+          <div class = "home">
+          <a href = "homepage.html" class="nav-link" data-view="home">Home</a>
         </div>
-        <div class="about">
-        About
+
+          <div class = "about">
+          <span class="nav-link" data-view="about">About</span>
         </div>
-        <div class="pricing">
-        Pricing
-        </div>
-        <div class="login">
-        Login
-        </div>
+          <div class = "login">
+          <a href = "login.html" class="nav-link" data-view="login">Login</a>
       </div>
       <div class="image-4">
       </div>
