register.html made, and link to homepage.html

--- a/src/frontend/Fitness Resouces/pages/homepage.html
+++ b/src/frontend/Fitness Resouces/pages/homepage.html
@@ -40,7 +40,7 @@
       </span>
       <div class="container-2">
         <span class="register-today">
-            <span class="register-today nav-link" data-view="register-today">Register Today</span>
+          <a href="register.html" class="nav-link" data-view="register-today">Register Today</a>
           </div>
         </span>
       </div>
