add href for new user on login page which goes to the register.html

--- a/src/frontend/Fitness Resouces/pages/login.html
+++ b/src/frontend/Fitness Resouces/pages/login.html
@@ -53,7 +53,7 @@
           Forget Password?
           </span>
           <span class="new-user">
-          New User
+            <a href="register.html" class="nav-link" data-view="new-user">New User</a>
           </span>
         </div>
         <div class="container">
