create javascript file for forget-password

--- a/src/frontend/Fitness Resouces/pages/forget-password.html
+++ b/src/frontend/Fitness Resouces/pages/forget-password.html
@@ -21,6 +21,6 @@
                 <p id = "message"></p>
             </form>
         </div>
-        <script src = "forget-password.java"></script>
+        <script src = "forget-password.js"></script>
     </body>
 </html>
