fix some of UXaspects for login page

--- a/src/frontend/Fitness Resouces/pages/forget-password.html
+++ b/src/frontend/Fitness Resouces/pages/forget-password.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class ="forget-password-container">
-            <h2>Forgot Passowrd</h2>
+            <h2>Forgot Password</h2>
             <p>Enter your email address to reset your password</p>
             <form id = "forgotPasswordForm">
                 <div class = "form-group">
