--- a/src/frontend/Fitness Resouces/pages/login.html
+++ b/src/frontend/Fitness Resouces/pages/login.html
@@ -50,7 +50,7 @@
         </div>
         <div class="container-4">
           <span class="forget-password">
-          Forget Password?
+            <a href = "forget-password.html" class = "nav-link" data-view = "new-user">Forget Password?</a>
           </span>
           <span class="new-user">
             <a href="register.html" class="nav-link" data-view="new-user">New User</a>
