--- a/src/frontend/Fitness Resouces/pages/Register.html
+++ b/src/frontend/Fitness Resouces/pages/Register.html
@@ -1,22 +1,31 @@
-<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Authentication Practice</title>
-  </head>
-  <body>
-    <h1>Register</h1>
-    <form action="/register" method="post">
-      <div>
-        <label>Username:</label>
-        <input type="text" name="username"/>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gym Registration</title>
+  <link rel="stylesheet" href="register.css">
+</head>
+<body>
+  <div class = "register-container">
+    <h1>Join Our Gym</h1>
+    <form class = "register-form">
+      <div class ="input-group">
+        <label for ="name">Full Name</label>
+        <input type = "text" id ="name" name = "name" placeholder = "Please Enter Your Full Name" required>
       </div>
-      <div>
-        <label>Password:</label>
-        <input type="password" name="password"/>
-      </div>
-      <div>
-        <input type="submit" value="Register"/>
+      <div class = "input-group">
+        <label for = "email">Email Address</label>
+        <input type = "email" id="email" name = "email" placeholder = "Enter your Email" required>
+        </div>
+        <div class = "input-group">
+          <label for="phone">Phone Number</label>
+          <input type = "tel" id="phone" name = "phone" placeholder = "Enter your Phone Number" required>
+        </div>
+        <div class = "input-group">
+          <label for="password">Password</label>
+          <input type = "password" id="password" name = "password" placeholder = "Create a password">
+        </div>
+        <button type = "submit">Register Now</button>
       </div>
     </form>
-  </body>
-</html>
+  </div>
