made a css register page to make it look better

--- a/src/frontend/Fitness Resouces/pages/Register.html
+++ b/src/frontend/Fitness Resouces/pages/Register.html
@@ -28,4 +28,5 @@
         <button type = "submit">Register Now</button>
       </div>
     </form>
+    <script src = "register.js"></script>
   </div>
