--- a/src/frontend/Fitness Resouces/pages/login.html
+++ b/src/frontend/Fitness Resouces/pages/login.html
@@ -5,81 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Login Page</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jua:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="loginpage.css" />
   </head>
   <body>
+    <!-- Navigation Bar -->
+    <div class="navbar">
+      <div class="nav-container">
+        <a href="homepage.html" class="nav-link">Home</a>
+        <span class="fitness-app-title">Fitness Arc</span>
+        <a href="login.html" class="nav-link">Login</a>
+      </div>
+    </div>
+
+    <!-- Login Form Container -->
     <div class="fitness-app-container">
       <div class="container-2">
-        <span class="fitness-app">
-        Fitness Arc
-        </span>
-        <div class="navbar">
-          <div class = "home">
-          <a href = "homepage.html" class="nav-link" data-view="home">Home</a>
-        </div>
-          <div class = "login">
-          <a href = "login.html" class="nav-link" data-view="login">Login</a>
+        <div class="container-5">
+          <div class="container-1">
+            <div class="iconenvelope-alt">
+              <img class="vector" src="../assets/vectors/vector_12_x2.svg" />
+            </div>
+            <input class="username" placeholder="Username">
+          </div>
+          <div class="line-1"></div>
+          <div class="container-3">
+            <div class="iconpadlock">
+              <img class="vector-1" src="../assets/vectors/vector_31_x2.svg" />
+            </div>
+            <input class="password" placeholder="Password">
+          </div>
+          <div class="line-2"></div>
+          <div class="container-4">
+            <span class="forget-password">
+              <a href="forget-password.html" class="nav-link">Forget Password?</a>
+            </span>
+            <span class="new-user">
+              <a href="register.html" class="nav-link">New User</a>
+            </span>
+          </div>
+          <div class="container">
+            <span class="login-1">
+              <button class="nav-button">Login</button>
+            </span>
+          </div>
         </div>
       </div>
-      <div class="container-5">
-        <div class="rectangle-2">
-        </div>
-        <div class="container-1">
-          <div class="iconenvelope-alt">
-            <img class="vector" src="../assets/vectors/vector_12_x2.svg" />
-          </div>
-          <input class="username" placeholder = "Username">
-          </input>
-        </div>
-        <div class="line-1">
-        </div>
-        <div class="container-3">
-          <div class="iconpadlock">
-            <img class="vector-1" src="../assets/vectors/vector_31_x2.svg" />
-          </div>
-          <input class="password" placeholder = "Password">
-          </input>
-        </div>
-        <div class="line-2">
-        </div>
-        <div class="container-4">
-          <span class="forget-password">
-            <a href = "forget-password.html" class = "nav-link" data-view = "new-user">Forget Password?</a>
-          </span>
-          <span class="new-user">
-            <a href="register.html" class="nav-link" data-view="new-user">New User</a>
-          </span>
-        </div>
-        <div class="container">
-          <span class="login-1">
-            <button onclick="location.href='login.html'" class="nav-button" data-view="login" placeholder = "Login">Login</button>
-          </span>
-        </div>
-      </div>
-    </div>
-    <!--
-      <div class = "login-form-container">
-      <form id = "loginForm">
-        <div class = "container-1">
-          <label for = "username">Username</label>
-          <input type = "text" id = "username" name = "username" required>
-        </div>
-        <div class = "container-3">
-          <div for = "password" id = "password" name = "password" required>
-          </div>
-    
-    -->
-          </label>
-        </div>
-      </form>
-      <p class = "error-message" id = "error-message"></p>
     </div>
   </body>
-  <script src = "login.js"></script>
 </html>
