add localstorage for login but have trouble making it work

--- a/src/frontend/Fitness Resouces/pages/DashBoard.html
+++ b/src/frontend/Fitness Resouces/pages/DashBoard.html
@@ -14,5 +14,5 @@
     <button onclick="navigateTo('tracker.html')">Workout Tracker</button>
 </div>
     </div>
-    <script src="script.js"></script>
+    <script src="DashBoard.js"></script>
 </body>
