--- a/src/frontend/Fitness Resouces/pages/login.html
+++ b/src/frontend/Fitness Resouces/pages/login.html
@@ -52,4 +52,27 @@
         </div>
       </div>
     </div>
+
+<script>
+    function auth(){
+    var email = document.getElementById("username").value;
+    var pass = document.getElementById("password").value;
     
+    //Retrieve stored credential from localStorage
+    var storedEmail = localStorage.getItem("userEmail");
+    var storedPassword = localStorage.getItem("userPassword");
+
+    //Basic authentication check
+    if(email === storedEmail && pass ===storedPassword){
+      alert("Login sucessful!");
+      window.location.href = "dashboard.html";
+      return false;
+
+    }else{
+      alert("Invalid email or password. Please try again.")
+      return false;
+    }
+  }
+</script>
+</body>
+</html>
